--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/addnewcity"
         android:name="com.example.nushiftproject.ui.addnew.Addnewcity"
-        android:label="fragment_addnewcity"
-        tools:layout="@layout/fragment_addnewcity" >
+        android:label="Add new city"
+        tools:layout="@layout/fragment_addnewcity">
         <action
             android:id="@+id/action_addnewcity_to_home2"
             app:destination="@id/home2" />
@@ -17,25 +17,35 @@
     <fragment
         android:id="@+id/home2"
         android:name="com.example.nushiftproject.ui.home.Home"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        android:label="Home"
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_home2_to_addnewcity"
-            app:destination="@id/addnewcity" />
+            app:destination="@id/addnewcity"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right"
+            app:popUpTo="@id/home2" />
         <action
             android:id="@+id/action_home2_to_mapsFragment"
-            app:destination="@id/mapsFragment" />
+            app:destination="@id/mapsFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left"
+            app:popUpTo="@id/home2" />
         <argument
             android:name="currnewdata"
+            android:defaultValue="@null"
             app:argType="com.example.nushiftproject.model.data.CityDataItem"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
         android:name="com.example.nushiftproject.ui.maps.MapsFragment"
-        android:label="fragment_maps"
-        tools:layout="@layout/fragment_maps" >
+        android:label="Maps"
+        tools:layout="@layout/fragment_maps">
         <action
             android:id="@+id/action_mapsFragment_to_home2"
             app:destination="@id/home2" />
